Update swagger UI for job search & add DTO for organization models
