# docs/swagger.yaml
@@ -464,39 +464,6 @@ definitions:
     x-enum-varnames:
     - RoleUser
     - RoleAdmin
-  models.SearchJobQuery:
-    properties:
-      careerStage:
-        description: Career stage (e.g., 'entry-level')
-        type: string
-      categories:
-        description: The category filter
-        type: string
-      location:
-        description: Location filter (e.g., 'chiang mai')
-        type: string
-      offset:
-        description: The number of items per page
-        type: integer
-      page:
-        description: The page number
-        type: integer
-      q:
-        description: The search keyword
-        type: string
-      salaryLowerBound:
-        description: Salary range (e.g., '1000-2000')
-        type: number
-      salaryUpperBound:
-        description: Salary upper bound
-        type: number
-      workType:
-        description: Work type (e.g., 'full-time')
-        type: string
-      workplace:
-        description: Workplace filter (e.g., 'remote')
-        type: string
-    type: object
   models.Timeline:
     properties:
       activity:
@@ -878,12 +845,6 @@ paths:
         in: query
         name: offset
         type: integer
-      - description: Search job query parameters
-        in: body
-        name: query
-        required: true
-        schema:
-          $ref: '#/definitions/models.SearchJobQuery'
       produces:
       - application/json
       responses:
